# math-apyhai

./: README.md  main.py  pyproject.toml
bench/: cpu_bench.py  gpu_bench.py  pi_timing_bench.py  singel_pi_bench.py
bench/cpu-benchmark/: benchmark_core.py  cpu-benchmark.py  cpuinfo.py
jupyter/: chudnovsky_pi.ipynb  complex-anz.ipynb  pi-converging.ipynb  prime-algorithm.ipynb  satellite-toolkit.ipynb
script/: mouse_polling.py  unit_circle_eye.py
src/: example.py  find_prime_n.py  main.py  mandelbrot_opz.py  multi_main.py  prime_finder.py  sorts.py
