[project]
name = "math-apyhai"
version = "0.1.0"
description = "Project to test the example code about math and performance computation in Python."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=8.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numba>=0.65.1",
    "pillow>=12.2.0",
    "pynput>=1.8.1",
    "scikit-image>=0.26.0",
    "sgp4>=2.26",
    "skyfield>=1.54",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
